Overflow fix, divide by 0, floating points added

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ width:180px;
     display:flex;
     flex-direction:column-reverse;
     align-items:flex-end;
+    overflow:hidden
 
 }
 
